--- a/css/estilos.css
+++ b/css/estilos.css
@@ -25,7 +25,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #cc98e0d7;
+    background-color: #ffaf45;
     padding: 1rem;
 }
 img{
@@ -56,7 +56,7 @@ img{
     margin: 0 auto;
     position: absolute;
     border-radius: 10px;
-    background-color:  rgb(115, 96, 189); ;;
+    background-color:  rgb(255, 136, 0); ;;
 }
 .enviar{
     font-weight: 500;
@@ -66,11 +66,11 @@ img{
     cursor: pointer;
     color: #fff;
     font-size: large;
-    background-color: rgb(171, 156, 226); ;
+    background-color: rgb(255, 183, 116); ;
 }
 .enviar:hover{
 
-    background-color: rgb(115, 96, 189); 
+    background-color: rgb(255, 146, 44); 
 }
 
 .campos input{
@@ -84,5 +84,5 @@ img{
     background-color: aliceblue;
 }
 .campos input:focus-visible{
-    outline: 2px solid rgb(115, 96, 189);
+    outline: 2px solid rgb(255, 145, 0);
 }
