--- a/css/estilos.css
+++ b/css/estilos.css
@@ -87,7 +87,7 @@ img{
     outline: 2px solid rgb(255, 145, 0);
 }
 
-@media screen and (max-widt: 1320px) {
+@media screen and (max-width: 1320px) {
     .imagem{
         display:none;
     }
